<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity"
    android:orientation="vertical">

    <!--header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView style="@style/header" />

        <Button
            android:id="@+id/btnBackRegister"
            style="@style/btnBackLogin"
            android:text="@string/btnLogin"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:text="@string/registerNoti"
            style="@style/textViewNoti"/>
        <TextView
            style="@style/textviewTitle"
            android:text="@string/emailTitle" />
        <EditText
            android:id="@+id/edtEmail"
            style="@style/edtInputInfor"/>
        <TextView
            style="@style/textviewTitle"
            android:text="@string/passTitle"/>
        <EditText
            android:id="@+id/edtPass"
            style="@style/edtInputInfor"
            android:inputType="textPassword"/>

        <TextView
            style="@style/textviewTitle"
            android:text="@string/rePassword" />

        <EditText
            android:id="@+id/edtRePass"
            style="@style/edtInputInfor"
            android:inputType="textPassword" />

        <Button
            android:layout_margin="25dp"
            android:id="@+id/btnNextRegister"
            android:layout_marginTop="15dp"
            android:text="@string/sNext"
            style="@style/btnlogin"></Button>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>