<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.ForgetPassActivity">
    <!--Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView style="@style/header"></TextView>

        <Button
            android:id="@+id/btnBackQMK"
            style="@style/btnBackLogin"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btnForgetPass" />
    </LinearLayout>

    <!--Body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            style="@style/textViewNoti"
            android:text="@string/forgetPassNoti" />

        <TextView
            style="@style/textviewTitle"
            android:text="@string/emailTitle" />

        <EditText
            android:id="@+id/edtEmailQMK"
            style="@style/edtInputInfor" />
        <TextView
            style="@style/textviewTitle" />
        <Button
            android:id="@+id/btnNextQMK"
            style="@style/btnlogin"
            android:text="@string/next" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>