<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.MainActivity">

    <!--header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/header"
            android:text="@string/btnLogin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            style="@style/textViewNoti"
            android:text="@string/sLogin" />


        <Button
            android:id="@+id/btnLogin"
            style="@style/btnlogin"
            android:layout_marginTop="15dp"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/btnregister"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btnRegister" />

        <TextView
            style="@style/textViewNoti"
            android:layout_marginTop="40dp"
            android:text="@string/optionLogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLoginGG"
                style="@style/btnOptionsLogin"
                android:background="@drawable/ic_google"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>